# testmpi

./: ABOUT_US.md  CMakeLists.txt  Dockerfile  Dockerfile-mpich  Dockerfile-openmpi-3.1.4  Dockerfile-openmpi-4.0.2  LICENSE.html  LICENSE.md  MISC.md  Makefile  README.md  _config.yml  galaxy_mpich.sbatch  master.py  mpi_check.c  mpi_hello_world.c  navigation.html  navigation.yml  pearcey-mpich.sbatch  pearcey-openmpi-2.1.6.sbatch  pearcey-openmpi-3.1.4.sbatch  pearcey-openmpi-4.0.2.sbatch  pearcey_mpich.sbatch
_data/: navigation.yml
_includes/: navigation.html
openmp/: CMakeLists.txt  openmp_check.c
